src/snapshots/afrotd__parser__tests__interpretation_html_2.30.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.30.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A21 fängt einen Vorwärtspass, während er auf dem Boden kniet. Der
            Passer wird während des Passes gerought.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                A21’s Fangen startet ein Laufspiel, welches sofort endet.
                15-Meterstrafe vom Ende des Laufes, First Down für Team A.
            </p>
        </details>
    </div>
</article>
