src/snapshots/afrotd__parser__tests__interpretation_html_2.30.4_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.30.4.II
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 10. A21 fängt einen Vorwärtspass und wird nach 10 Metern
            Raumgewinn getackelt. Er fumbelt durch den Tackle. Der Fumble wird
            5 Meter jenseits des Fumble Spots von dem am Boden liegenden A24
            recovert. Während des Passes wird der Passer gerought.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                15-Meterstrafe vom Punkt der Recovery durch A24 (Ende des
                letzten Laufes). First Down für Team A.
            </p>
        </details>
    </div>
</article>
