src/snapshots/afrotd__parser__tests__interpretation_html_2.4.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.4.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            B1 versucht, ohne Fair Catch-Signal einen Punt zu fangen, der die
            neutrale Zone überquert. Der Ball streift seine Schulter (Muff) und
            prallt hoch in die Luft. Der Ball berührt nicht den Boden, und der
            in der Luft befindliche A1 erreicht den Ball im Flug und kommt erst
            im Seitenaus auf den Boden auf.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B’s Ball an dem Punkt, an dem der Ball die Seitenlinie
                überquert hat. First Down und 10 Meter.
            </p>
        </details>
    </div>
</article>
