src/snapshots/afrotd__parser__tests__interpretation_html_2.4.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.4.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Receiver A88 befindet sich in der Nähe der Seitenlinie und streckt
            sich, um einen legalen Vorwärtspass zu erreichen. Als A88 springt,
            um den Pass zu fangen, (a) erlangt er sichere Kontrolle über den
            Ball, während sich seine Zehen inbounds befinden und er
            anschließend im Aus zu Boden fällt, wobei er die sichere Kontrolle
            behält. (b) A88 erlangt sichere Kontrolle über den Ball während er
            sich mit seinen Zehen inbounds befindet, jongliert mit dem Ball als
            er in der Luft ist, erlangt wieder sichere Kontrolle bevor er im
            Aus landet und behält die Kontrolle bei der Landung. (c) A88
            erlangt sichere Kontrolle über den Ball mit seinen Zehen inbounds,
            verliert aber die sichere Kontrolle, als er auf den Boden prallt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Fangen ist vollständig. (b) Unvollständiger Vorwärtspass.
                (c) Unvollständiger Vorwärtspass.
            </p>
        </details>
    </div>
</article>
