src/snapshots/afrotd__parser__tests__interpretation_html_2.8.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.8.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Free Kick von der A-35. Der Kickoff ist hoch und tief. Kickreturner
            B21 gibt, an der eigenen Goalline stehend, ein „T –Signal“. B21
            fängt den Kick direkt an der Goalline und advanct bis zur B-35.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Das „T –Signal“ gilt als ungültiges Fair Catch Signal und der
                Ball wird dead, wenn der Kick gefangen wurde. Die
                Schiedsrichter müssen den Down beenden, nachdem B21 in
                Ballbesitz ist. Team B’s Ball, 1. und 10 von der B-25.
            </p>
        </details>
    </div>
</article>
