src/snapshots/afrotd__parser__tests__interpretation_html_3.1.1_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.1.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem die Zuständigkeit der Schiedsrichter begonnen hat, betreten
            einige Heimteam-Spieler die Spielfläche ohne ihre Trikots bzw. ohne
            dass ihre Nummern deutlich sichtbar sind.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Spieler ohne Trikot oder sichtbaren Nummern müssen die
                Spielfläche verlassen. Der Head Coach oder ein auf dem Feld
                befindlicher Assistenz-Coach können in dieser Situation
                behilflich sein.
            </p>
        </details>
    </div>
</article>
