src/snapshots/afrotd__parser__tests__interpretation_html_3.1.3_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach dem Ende der ersten Ballbesitz-Serie durch Team A verursacht
            Team B ein Dead Ball Foul.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B startet seine Serie an der 40-Meterlinie, First Down und
                10.
            </p>
        </details>
    </div>
</article>
